--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>NgContacts</title>
+  <title>Gestion des FCPE</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,6 @@
  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Chargement...</app-root>
 </body>
 </html>
